--- a/public/rapporter/rapporter.view.html
+++ b/public/rapporter/rapporter.view.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 view-container fontFamily">
   <div class="row">
     <div class="col-md-12">
       <h1>Rapporter</h1>
