--- a/public/referanse/referanse.view.html
+++ b/public/referanse/referanse.view.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12" id="serchingSite" style="margin-top: 10%;" ng-show="showBooking == false">
       <div class="col-md-8 col-md-offset-2">
-          <h3 style="text-align: center;">Finn booking</h3>
+          <h3 style="text-align: center;">Skriv inn referanse-id:</h3>
           <hr>
       </div>
       <div class="col-md-6 col-md-offset-3">
