Endret design på artist

--- a/public/referanse/referanse.view.html
+++ b/public/referanse/referanse.view.html
@@ -30,7 +30,7 @@
             <img class="img-responsive img-rounded img-centered" src="{{booking.imgUrl}}" alt="bilde av {{booking.artist}}" style="height: 200px;"/>
           </div>
           <div class="col-md-6 artistInfo">
-            <p><b>Artist: </b>{{booking.artist}}</p>
+            <p class=" changeSize"><b>{{booking.artist}}</b></p>
             <p><b>Dato: </b>{{intToDateFunction(booking.dato).toDateString()}}</p>
             <p><b>Tid: </b>{{booking.tid}}</p>
             <p><b>Scene: </b>{{booking.scene}}</p>
