Fikset dato slik at den er på norsk på arrangementer, bookinger og rapporter, fikset også btn klassen på rapporter.

--- a/public/bookinger/bookinger.view.html
+++ b/public/bookinger/bookinger.view.html
@@ -33,7 +33,7 @@
         <!--Dato-->
         <div class ="row">
           <div class="col-lg-12 dateDesign">
-            <h2 class="fontSizeDate">{{intToDateFunction(key).toDateString()}}</h2>
+            <h3 class="fontSizeDate">{{printableDateFunction(key)}}</h3>
           </div>
         </div>
         <ul class="list-unstyled">
