--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -47,7 +47,7 @@
     <li ng-repeat="(key, value) in filtrertListe">
       <div class ="row">
         <div class="col-lg-12 dateDesign">
-          <h2>{{intToDateFunction(key).toDateString()}}</h2>
+          <h3 class="fontSizeDate">{{printableDateFunction(key)}}</h3>
         </div>
       </div>
       <ul class="list-unstyled">
