Endret så rapport er midtstilt

--- a/public/rapporter/rapporter.view.html
+++ b/public/rapporter/rapporter.view.html
@@ -74,7 +74,7 @@
 </div>
 
 <div class="item-modal modal fade" ng-blur="showRapport = false" id="information-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="showRapport = false">
-        <div class="modal-content" style="width:75%; margin: auto; min-height: 75%;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
+        <div class="modal-content rapportModal">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
@@ -82,9 +82,9 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row" style="text-align: center;">
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="modalRapport" name="modal">
+                        <div class="col-md-8 modalRapport" name="modal">
                           <h3>RAPPORT</h3>
                           <br><br>
                           <h2>{{modalInformation.artist}}</h2>
