--- a/public/rapporter/rapporter.view.html
+++ b/public/rapporter/rapporter.view.html
@@ -43,7 +43,7 @@
         <li ng-repeat="(key, value) in filtrertListe">
           <div class ="row">
             <div class="col-lg-12 dateDesign">
-              <h2 class="fontSizeDate">{{intToDateFunction(key).toDateString()}}</h2>
+              <h3 class="fontSizeDate">{{printableDateFunction(key)}}</h3>
             </div>
           </div>
           <ul class="list-unstyled">
