Legger til mailto-funksjon

--- a/public/referanse/referanse.view.html
+++ b/public/referanse/referanse.view.html
@@ -44,7 +44,7 @@
             <h3>Tekniker:</h3>
             <br>
             <p><b>Navn:</b>{{mainBrukere[booking.teknikere[0]].navn}}</p>
-            <p><b>E-mail: </b>{{mainBrukere[booking.teknikere[0]].email}}</p>
+              <p><b>E-mail: </b><a href="mailto:{{mainBrukere[booking.teknikere[0]].email}}" target="_top">{{mainBrukere[booking.teknikere[0]].email}}</a></p>
             <p><b>Telefon: </b>{{mainBrukere[booking.teknikere[0]].telefon}}</p>
           </div>
 
