--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -46,27 +46,27 @@
   <ul class="list-unstyled">
     <li ng-repeat="(key, value) in filtrertListe">
       <div class ="row">
-        <div class="col-lg-12 dateDesign">
+        <div class="col-xs-12 dateDesign">
           <h3 class="fontSizeDate">{{printableDateFunction(key)}}</h3>
         </div>
       </div>
       <ul class="list-unstyled">
         <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
           <div class="row pFontSize bookingoObject">
-              <div class="col-lg-3 alignMiddle border-Right">
+              <div class="col-xs-3 alignMiddle border-Right">
                 <p>{{konsert.artist}}</p>
               </div>
 
-              <div class="col-lg-2 alignMiddle textAlign border-Right">
+              <div class="col-xs-2 alignMiddle textAlign border-Right">
                 <p>{{konsert.tid}}</p>
               </div>
-              <div class="col-lg-2 alignMiddle textAlign border-Right">
+              <div class="col-xs-2 alignMiddle textAlign border-Right">
                 <p>{{konsert.scene}}</p>
               </div>
-              <div class="col-lg-3 alignMiddle textAlign">
+              <div class="col-xs-3 alignMiddle textAlign">
                 <p>{{konsert.pris_medlem}},- / {{konsert.pris_ikke_medlem}},-</p>
               </div>
-              <div class="col-lg-2">
+              <div class="col-xs-2">
                 <a ng-click="updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-samfundet">Oversikt</button></a>
               </div>
             </div>
