--- a/public/bookinger/bookinger.view.html
+++ b/public/bookinger/bookinger.view.html
@@ -32,7 +32,7 @@
       <li ng-repeat="(key, value) in filtrertListe">
         <!--Dato-->
         <div class ="row">
-          <div class="col-lg-12 dateDesign">
+          <div class="col-sm-12 dateDesign">
             <h3 class="fontSizeDate">{{printableDateFunction(key)}}</h3>
           </div>
         </div>
@@ -40,21 +40,21 @@
           <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false; showKommentar = false;">
 
             <div class="row pFontSize bookingoObject">
-              <div class="col-lg-3 alignMiddle border-Right">
+              <div class="col-sm-3 alignMiddle border-Right">
                 <p>{{konsert.artist}} <span style="opacity: 0.5; font-size: 80%">{{makeStatusPrintable(konsert.status)}}</span></p>  <!--LEGG TIL HARDCODET CSS TIL MANI.CSS -->
               </div>
-              <div class="col-lg-2 alignMiddle textAlign border-Right">
+              <div class="col-sm-2 alignMiddle textAlign border-Right">
                 <p>{{konsert.tid}}</p>
               </div>
-              <div class="col-lg-2 alignMiddle textAlign border-Right">
+              <div class="col-sm-2 alignMiddle textAlign border-Right">
                 <p>{{konsert.pris_medlem}},- / {{konsert.pris_ikke_medlem}},-</p>
               </div>
-              <div class="col-lg-2 alignMiddle textAlign">
+              <div class="col-sm-2 alignMiddle textAlign">
                 <p>{{konsert.scene}}</p>
               </div>
 
               <!--<p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>-->
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <button class="btn btn-success" ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
                 <button class="btn btn-danger" ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
                 <button class="btn btn-success" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangement</button>
@@ -70,7 +70,7 @@
                   </div>
                   <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
                 </form>
-                <div class="col-lg-12" ng-show="showKommentar == true">
+                <div class="col-sm-12" ng-show="showKommentar == true">
                   <h5><b>Kommentar: </b><i>{{konsert.kommentar_for_avvisning}}</i></h5>
                 </div>
               </div>
